--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
     "react": "^19.2.4",
+    "react-content-loader": "^7.1.2",
     "react-dom": "^19.2.4",
+    "react-loading-skeleton": "^3.5.0",
     "react-scripts": "5.0.1",
     "sass": "^1.97.3",
     "web-vitals": "^2.1.4"
