--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-content-loader": "^7.1.2",
     "react-dom": "^19.2.4",
     "react-loading-skeleton": "^3.5.0",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "sass": "^1.97.3",
     "web-vitals": "^2.1.4"
